# human_interaction_robot

./: README.md
hir_bringup/: CMakeLists.txt  package.xml
hir_bringup/launch/: display_xacro.launch  interaction_robot.launch  interaction_robot_sim.launch  kondo_driver.launch
hir_control/: CMakeLists.txt  package.xml
hir_control/config/: hir_controller.yaml  position_control.yaml  trajectory_control.yaml
hir_control/launch/: control.launch  manipulator_control.launch
hir_description/: CMakeLists.txt  package.xml
hir_description/meshes/STL/: base_without_pole.stl  joint0.stl  joint1.stl  joint2.stl  joint3.stl  joint4.stl  joint5.stl  joint6.stl  pole.stl  wheel.stl
hir_description/robots/: interaction_robot.xacro  manipulator_only.xacro
hir_description/urdf/: materials.xacro
hir_description/urdf/base/: base.gazebo.xacro  base.urdf.xacro
hir_description/urdf/manipulator/: manipulator.gazebo.xacro  manipulator.transmission.xacro  manipulator.urdf.xacro
hir_description/urdf/wheel/: wheel.gazebo.xacro  wheel.transmission.xacro  wheel.urdf.xacro
hir_gazebo/: CMakeLists.txt  package.xml
hir_gazebo/scripts/: demo.py
hir_gazebo/src/: demo.cpp
hir_learning/: CMakeLists.txt  package.xml
hir_learning/scripts/: analyze.py  ddqn.py  demo.py  diagnose.py  dummy_robot.py  environment.py  initialize.py  real.py  real_environment.py  real_parameters.cfg  real_sampling.py  real_test.py  real_training.py  set_fixed_pos_arm.py  sim_environment.py  sim_test.py  sim_training.py  test.py  training.py  training_ddpg.py  training_ppo.py  training_real_time.py  training_real_time_haya.py
hir_learning/src/: demo.cpp
hir_moveit_config/: CMakeLists.txt  package.xml
hir_moveit_config/config/: controllers.yaml  fake_controllers.yaml  interaction_robot.srdf  joint_limits.yaml  kinematics.yaml  manipulator.srdf  ompl_planning.yaml
hir_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  interaction_robot_moveit_controller_manager.launch.xml  manipulator_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  moveit_rviz.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  test.launch  trajectory_execution.launch.xml  warehouse.launch
hir_report/midterm_report/: fed2012doc.sty  proposed_procedure.tex
hir_report/midterm_report/ieeetrans_format/: README.md  background.tex  behavior_selection_through.tex  experiment_condition.tex  method_of_measuring_force.tex  midterm_report.tex
hir_report/midterm_report/jthesis_format/: README.md  background.tex  behavior_selection_through.tex  conclusion.tex  experiment_condition.tex  method_of_measuring_force.tex  midterm_report.tex  related_works.tex
hir_setup/: README.md  install_gazebo7.sh
hir_strategy/: CMakeLists.txt  package.xml
hir_strategy/scripts/: demo.py
