<?xml version="1.0"?>
<package>
  <name>hir_description</name>
  <version>0.0.0</version>
  <description>The hir_description package</description>

  <maintainer email="supratmanjoshua@gmail.com">jsupratman13</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
