<?xml version="1.0"?>
<package>
  <name>hir_gazebo</name>
  <version>0.0.0</version>
  <description>The hir_gazebo package</description>

  <maintainer email="supratmanjoshua@gmail.com">jsupratman13</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>
