<?xml version="1.0"?>
<package>
  <name>hir_strategy</name>
  <version>0.0.0</version>
  <description>The hir_strategy package</description>
  
  <maintainer email="supratmanjoshua@gmail.com">jsupratman13</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>


  <export>
  </export>
</package>
